take out padding left and right from default containter setting for max-width 768 to fix alignment

--- a/styles.css
+++ b/styles.css
@@ -1475,7 +1475,7 @@ footer ul {
     width: 100%;
     max-width: 768px;
     margin: 0 auto;
-    padding: 48px 32px;
+    padding: 48px 0;
   }
 
   .row {
